--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 DB_CNN=mongodb+srv://mern_user:VlRBDqvt0dHaFQv1@cluster0.i1xamef.mongodb.net/mern_calendar
+SECRET_JWT_SEED=Esto-Es-UnA-PalabR@_SEcRetA19903S
